Fixed chat clipping mentioned in DEP-7522   and send button issue on resizing

--- a/app/assets/stylesheets/bubble.scss
+++ b/app/assets/stylesheets/bubble.scss
@@ -7,7 +7,9 @@ $bubble-border-width: 0.3157894737em;
     // background-color: #e9e9e9;
     max-width: 80%;
     margin: 0 auto 2rem auto;
-    padding: 0.5rem 1.3rem;
+    padding-left: 1.3rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     border-radius: 10px;
     line-height: 1.4em;
     color: #0b0c0c;
